--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketplaylist",
-  "homepage": "https://shilpasingh07.github.io/Pocket-Playlist",
+  "homepage": "https://shilpasingh07.github.io/Pocket-Playlist/public/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
